--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -5,7 +5,7 @@
     <div class="ele-strip">
       <ul>
         <li *ngFor="let type of hotelTypes">
-          <a href="#" (click)="selectedType=type">{{type}}</a>
+          <a (click)="selectedType=type">{{type}}</a>
         </li>
 
         <!--   //todo
